<resources>
    <string name="app_name">CourseApp</string>

    <string name="login">Вход</string>
    <string name="email">Email</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="hint_password">Введите пароль</string>
    <string name="entry">Вход</string>
    <string name="no_account">Нету аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="more">Подробнее</string>
    <string name="search_courses">Search courses…</string>
    <string name="by_date_added">По дате добавления</string>

    <string name="price_format">%d ₽</string>
    <string name="favourites">Избранное</string>
    <string name="profile">Профиль</string>
</resources>